# AITraining

./: .gitignore
pythonlearning/: .webui_secret_key  Notes.txt  first.py  ifloop.py  pythonutil.py  travily.py
pythonlearning/Crewai/deployment_crew/: README.md  pyproject.toml
pythonlearning/Crewai/deployment_crew/src/deployment_crew/: crew.py  main.py
pythonlearning/NLP/: NLPintro.txt  NLTK.ipynb  Textblob.ipynb  Untitled.ipynb  chatbot1.py  feedback_summary.csv  nlpchat.py  nlpchat1.py
pythonlearning/RAG/: DocumentLoader.py  Untitled.ipynb  day1.ipynb  day2 EXERCISE.ipynb  day2.ipynb  day4.ipynb  day5.ipynb  huggingfacelogin.py  index.html  usecase.txt
pythonlearning/Security/: garak.yaml  garak1.yaml  securityllamaguard.py  securityllamaguard1.py  securityllamaguard2.py
pythonlearning/chatbot/: chatbot1.py  chatbot2.py  chatbot4.py
pythonlearning/functions/: main.py
pythonlearning/langgraph/: Langgraphchatbot.py  langgraphbasics.py  langgraphopenai.py  langgraphtools.py
pythonlearning/lms/: lmsapi.py
pythonlearning/loops/: Try.txt  Untitled.ipynb  Untitled1.ipynb  nlplearning.ipynb  try.py  whileloop.py  whileloop1.py
pythonlearning/ollama/: ollama.py  ollamaapi.py
pythonlearning/openai/: langfuseobservability.py  monitoring.txt  openai1.py  openaiAPI.py  openailogcollector.py
pythonlearning/pandas/: pandasbasics.ipynb
pythonlearning/rag-faiss-project/: requirement.txt
pythonlearning/rag_agent/: ingest.py  langgraph_agent.py  rag_langchain.py  requirements
pythonlearningold/: Variable.txt  pythonutil_function.txt  range.txt  variables.py
(+29 files in other folders)
