[project]
name = "deployment_crew"
version = "0.1.0"
description = "deployment_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
deployment_crew = "deployment_crew.main:run"
run_crew = "deployment_crew.main:run"
train = "deployment_crew.main:train"
replay = "deployment_crew.main:replay"
test = "deployment_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
